python-dogpile.cache (0.5.3-1) unstable; urgency=medium

  * New upstream release (Closes: #745488).
  * Fixed upstream VCS URLs.
  * Standards-Version: is now 3.9.5.

 -- Thomas Goirand <zigo@debian.org>  Sat, 03 May 2014 21:04:30 +0800

python-dogpile.cache (0.5.0-1) unstable; urgency=low

  * Initial release. (Closes: #722051)

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Sep 2013 20:41:04 +0800